--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "gptube-mvp",
+  "name": "gptube_mvp",
   "version": "1.0.0",
-  "private": true,
+  "description": "GPTube MVP WebRTC + Chat Server",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
