--- a/package.json
+++ b/package.json
@@ -7,8 +7,24 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "socket.io": "^4.7.2"
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
+  },
+  "engines": {
+    "node": "22.x"
+  }
+}
+{
+  "name": "gptube_mvp",
+  "version": "1.0.0",
+  "description": "GPTube MVP WebRTC + Socket.io Server",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.19.2",
+    "socket.io": "^4.7.5"
   },
   "engines": {
     "node": "22.x"
